#class-query-service: implement API findAllClassesByIds